// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyCodes Component should render 1`] = `
<Tooltip
  content="Copied to clipboard!"
  dark={true}
  disabled={true}
>
  <Button
    onClick={[Function]}
  >
    <ContentCopy
      size={14}
    />
    Copy
  </Button>
</Tooltip>
`;

exports[`CopyCodes Component should show tooltip when copied state is true 1`] = `
<Tooltip
  content="Copied to clipboard!"
  dark={true}
  disabled={false}
>
  <Button
    onClick={[Function]}
  >
    <ContentCopy
      size={14}
    />
    Copy
  </Button>
</Tooltip>
`;
